added img header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
 <body>
     <header>
-        <h1>Il mio Viaggio a Londra</h1>
+        <!--  titolo dell'header -->
+       <h1>Il mio Viaggio a Londra</h1>
+       <!--  immagini dell'header -->
+       <img src="img/img1.jpg" alt="immagine di Londra prima parte">
+       <img src="img/img2.jpg" alt="immagine di Londra seconda parte">
+       <img src="img/img3.jpg" alt="immagine di Londra terza parte">
     </header>
+
 </body>
 </html>
