--- a/index.html
+++ b/index.html
@@ -17,5 +17,47 @@
        <img src="img/img3.jpg" alt="immagine di Londra terza parte">
     </header>
 
+    <main>
+<!--  prima sezione -->
+        <section>
+            <hr>
+            <h2>Le mie spese</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto Aereo</td>
+                            <td>120€</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto Aereo</td>
+                            <td>120€</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto Aereo</td>
+                            <td>120€</td>
+                        </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360€</td>
+                    </tr>
+                </tfoot>
+            </table>
+        </section>
+
+    </main>
+
 </body>
 </html>
