--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
         </section>
   <!--  chiusura prima sezione -->
 
+  <!--  seconda sezione -->
+  <section>
+    <hr>
+    <h3>Cose da fare</h3>
+    <ul>
+        <li>Visitare la Tower of London &#10007;</li>
+        <li>Visitare greenwich &#10003;</li>
+        <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
+        <li>Mangiare il tipico Fish and Chips inglese &#10007;</li>
+    </ul>
+    
+</section>
+<!--  chiusura seconda sezione -->
+
     </main>
 
 </body>
